# RenderEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  main.cpp
shaders/: binning.comp  classify.comp  cull.comp  filtercube.vert  fullscreen.vert  fxaa.frag  fxaa.vert  genbrdflut.frag  genbrdflut.vert  irradiancecube.frag  material.comp  pbr.frag  pbr.vert  prefilterenvmap.frag  prefix_sum.comp  prepass.frag  prepass.vert  resolve.comp  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  visbuffer.frag  visbuffer.vert  zprepass.frag  zprepass.vert
src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Device.cpp  Device.h  RenderGraph.cpp  RenderGraph.h  RenderPassNode.h  Renderer.cpp  Renderer.h  ResourceHeap.cpp  ResourceHeap.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/AssetSystem/: AssetStreamer.cpp  IBL.cpp  LoaderGLTF.cpp  LoaderGLTF.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/Core/: Application.cpp  Application.h  AssetStreamer.cpp  AssetStreamer.h  Buffer.cpp  Buffer.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  EngineConfig.h  Exception.cpp  Exception.h  InputBackend.h  InputBackendWindows.cpp  InputBackendWindows.h  InputManager.cpp  InputManager.h  JobSystem.h  SceneManager.cpp  SceneManager.h  VkUtils.h  Window.cpp  Window.h  WindowInterface.h  WindowWin32.cpp  WindowWin32.h  main.cpp
src/Passes/: CullPassNode.cpp  CullPassNode.h  ForwardPassNode.cpp  ForwardPassNode.h  FxaaPassNode.cpp  FxaaPassNode.h  GBufferPassNode.cpp  GBufferPassNode.h  LightPassNode.cpp  LightPassNode.h  MaterialPassNode.cpp  MaterialPassNode.h  ResolvePassNode.cpp  ResolvePassNode.h  SsaoPassNode.cpp  SsaoPassNode.h  VisibilityPassNode.cpp  VisibilityPassNode.h  ZPrePassNode.cpp  ZPrePassNode.h
src/Renderer/: FrameInfo.h  RenderGraph.cpp  RenderGraph.h  RenderPassNode.h  Renderer.cpp  Renderer.h  ResourceHeap.cpp  ResourceHeap.h  ShaderUtils.h  Swapchain.cpp  Swapchain.h
src/Renderer/Passes/: CullPassNode.cpp  CullPassNode.h  FxaaPassNode.cpp  FxaaPassNode.h  MaterialPassNode.cpp  MaterialPassNode.h  SsaoPassNode.cpp  SsaoPassNode.h  VisibilityPassNode.cpp  VisibilityPassNode.h
src/Scene/: Camera.cpp  Camera.h  FrameInfo.h  GameObject.cpp  GameObject.h  IBL.cpp  IBL.h  KeyboardMovement.cpp  KeyboardMovement.h  LoaderGLTF.cpp  LoaderGLTF.h  Model.cpp  Model.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h
src/System/Input/: InputBackend.h  InputBackendWindows.cpp  InputBackendWindows.h  InputManager.cpp  InputManager.h  InputTypes.h
src/System/Window/: Window.cpp  Window.h  WindowInterface.h  WindowWin32.cpp  WindowWin32.h
src/Threading/: JobSystem.h
src/Vulkan/: Buffer.cpp  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  ResourceHeap.cpp  ResourceHeap.h  Swapchain.cpp  Swapchain.h  VkUtils.h
tests/: CMakeLists.txt
tests/Core/: EngineConfigTest.cpp  ExceptionTest.cpp
tests/Integration/: PassesTest.cpp  RenderPassIntegrationTest.h
tests/Renderer/: FrameInfoStructTest.cpp  PerformanceMonitorTest.cpp  RenderGraphBuilderTest.cpp  RenderGraphCompileTest.cpp  RenderGraphExecutionTest.cpp  RenderGraphLifecycleTest.cpp  RenderGraphRegistryTest.cpp  ShaderUtilsTest.cpp
tests/Scene/: CameraProjectionTest.cpp  CameraViewTest.cpp
tests/Vulkan/: BufferAlignmentTest.cpp  BufferDescriptorInfoTest.cpp  QueueFamilyIndicesTest.cpp  VkUtilsTest.cpp
